# OniFoxed

./: .editorconfig  .gitignore  CMakeLists.txt  config.h.cmake
BungieFrameWork/: CMakeLists.txt
BungieFrameWork/BFW_Headers/: BFW.h  BFW_AppUtilities.h  BFW_BitVector.h  BFW_MathLib.h
BungieFrameWork/BFW_Source/BFW_AppUtilities/: BFW_AppUtilities.c
BungieFrameWork/BFW_Source/BFW_Bink/: BFW_Bink.c
BungieFrameWork/BFW_Source/BFW_LocalInput/Platform_Win32/: BFW_LI_Platform_Win32.c  BFW_LI_Platform_Win32.h
BungieFrameWork/BFW_Source/BFW_MathLib/: BFW_MathLib.c
BungieFrameWork/BFW_Source/BFW_Motoko/Engines/DrawEngine/3DFX_Glide/: lrar_cache2.c
BungieFrameWork/BFW_Source/BFW_Motoko/Engines/DrawEngine/OpenGL/: gl_engine.h  gl_mswindows.c  gl_utility.c
BungieFrameWork/BFW_Source/BFW_SoundSystem2/Platform_Win32/: BFW_SS2_Platform_Win32.c  BFW_SS2_Platform_Win32.h
BungieFrameWork/BFW_Source/BFW_Utility/: BFW_BitVector.c  BFW_Error.c
BungieFrameWork/BFW_Source/BFW_Utility/Platform_Win32/: BFW_Platform_Win32.c
BungieFrameWork/BFW_ToolSource/Common/TemplateExtractor/: TE_Extract.c
OniProj/OniCMakeProjs/OniProj/: CMakeLists.txt
OniProj/OniCMakeProjs/TEVCProj/: CMakeLists.txt
OniProj/OniGameSource/: Oni.c  Oni_Character.c  Oni_Platform.h  Oni_Sound_Animation.c
OniProj/OniGameSource/Oni_AI/: Oni_AI2_Executor.c  Oni_AI2_Melee.c  Oni_AStar.c
OniProj/OniGameSource/Oni_Object/: Oni_Object.c
OniProj/OniGameSource/Oni_Object/object_types/: OT_Door.c
OniProj/OniGameSource/Oni_Windows/: Oni_Win_Tools.c
OniProj/OniGameSource/Platform_Win32/: Oni_Platform_Win32.c
OniProj/OniMWProjects/OniProj/OniPrefix/: ImporterPrefix_MacOSDbg.h  ImporterPrefix_MacOSOpt.h  ImporterPrefix_Win32.h  OniPrefix_MacOSDbg.h  OniPrefix_MacOSOpt.h  OniPrefix_MacOSProfile.h  OniPrefix_Win32Opt.h
OniProj/OniResources/: OniResources.rc
cmake/modules/: FindBink.cmake
